// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot on read only 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div>
      <div
        class="octo-group-header-cell"
        draggable="true"
        style="opacity: 1;"
      >
        <div
          class="octo-table-cell"
          style="width: 100px;"
        >
          <span
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class="Button IconButton css-w119tu"
              style="width: 24px; height: 24px; margin-right: 4px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1yplxme-MuiSvgIcon-root"
                data-testid="ArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m10 17 5-5-5-5z"
                />
              </svg>
            </button>
          </span>
          <span
            aria-label="Items with an empty {propertyName} property will go here. This column cannot be removed."
            class="MuiTypography-root MuiTypography-subtitle1 css-xi0xw7-MuiTypography-root"
            data-mui-internal-clone-element="true"
          >
            No undefined
          </span>
          <span
            class="Label propColorTurquoise "
          >
            <input
              class="Editable readonly undefined"
              placeholder="New Select"
              readonly=""
              spellcheck="true"
              title="value 1"
              value="value 1"
            />
          </span>
        </div>
        <button
          class="Button size--small"
          type="button"
        >
          <span>
            0
          </span>
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`should match snapshot with Group 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div>
      <div
        class="octo-group-header-cell"
        draggable="true"
        style="opacity: 1;"
      >
        <div
          class="octo-table-cell"
          style="width: 100px;"
        >
          <span
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class="Button IconButton css-w119tu"
              style="width: 24px; height: 24px; margin-right: 4px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1yplxme-MuiSvgIcon-root"
                data-testid="ArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m10 17 5-5-5-5z"
                />
              </svg>
            </button>
          </span>
          <span
            aria-label="Items with an empty {propertyName} property will go here. This column cannot be removed."
            class="MuiTypography-root MuiTypography-subtitle1 css-xi0xw7-MuiTypography-root"
            data-mui-internal-clone-element="true"
          >
            No undefined
          </span>
          <span
            class="Label propColorTurquoise "
          >
            <input
              class="Editable undefined"
              placeholder="New Select"
              spellcheck="true"
              title="value 1"
              value="value 1"
            />
          </span>
        </div>
        <button
          class="Button size--small"
          type="button"
        >
          <span>
            0
          </span>
        </button>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          data-testid="menu-wrapper"
          role="button"
        >
          <span
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class="Button IconButton css-w119tu"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-411e09-MuiSvgIcon-root"
                data-testid="MoreHorizIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                />
              </svg>
            </button>
          </span>
        </div>
        <span
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            class="Button IconButton css-w119tu"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-411e09-MuiSvgIcon-root"
              data-testid="AddIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </span>
</div>
`;

exports[`should match snapshot, add new 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div>
      <div
        class="octo-group-header-cell"
        draggable="true"
        style="opacity: 1;"
      >
        <div
          class="octo-table-cell"
          style="width: 100px;"
        >
          <span
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class="Button IconButton css-w119tu"
              style="width: 24px; height: 24px; margin-right: 4px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1yplxme-MuiSvgIcon-root"
                data-testid="ArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m10 17 5-5-5-5z"
                />
              </svg>
            </button>
          </span>
          <span
            aria-label="Items with an empty {propertyName} property will go here. This column cannot be removed."
            class="MuiTypography-root MuiTypography-subtitle1 css-xi0xw7-MuiTypography-root"
            data-mui-internal-clone-element="true"
          >
            No undefined
          </span>
          <span
            class="Label propColorTurquoise "
          >
            <input
              class="Editable undefined"
              placeholder="New Select"
              spellcheck="true"
              title="value 1"
              value="value 1"
            />
          </span>
        </div>
        <button
          class="Button size--small"
          type="button"
        >
          <span>
            0
          </span>
        </button>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          data-testid="menu-wrapper"
          role="button"
        >
          <span
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class="Button IconButton css-w119tu"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-411e09-MuiSvgIcon-root"
                data-testid="MoreHorizIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                />
              </svg>
            </button>
          </span>
        </div>
        <span
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            class="Button IconButton css-w119tu"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-411e09-MuiSvgIcon-root"
              data-testid="AddIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </span>
</div>
`;

exports[`should match snapshot, edit title 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div>
      <div
        class="octo-group-header-cell"
        draggable="true"
        style="opacity: 1;"
      >
        <div
          class="octo-table-cell"
          style="width: 100px;"
        >
          <span
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class="Button IconButton css-w119tu"
              style="width: 24px; height: 24px; margin-right: 4px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1yplxme-MuiSvgIcon-root"
                data-testid="ArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m10 17 5-5-5-5z"
                />
              </svg>
            </button>
          </span>
          <span
            aria-label="Items with an empty {propertyName} property will go here. This column cannot be removed."
            class="MuiTypography-root MuiTypography-subtitle1 css-xi0xw7-MuiTypography-root"
            data-mui-internal-clone-element="true"
          >
            No undefined
          </span>
          <span
            class="Label propColorTurquoise "
          >
            <input
              class="Editable undefined"
              placeholder="New Select"
              spellcheck="true"
              title="value 1"
              value="value 1"
            />
          </span>
        </div>
        <button
          class="Button size--small"
          type="button"
        >
          <span>
            0
          </span>
        </button>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          data-testid="menu-wrapper"
          role="button"
        >
          <span
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class="Button IconButton css-w119tu"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-411e09-MuiSvgIcon-root"
                data-testid="MoreHorizIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                />
              </svg>
            </button>
          </span>
        </div>
        <span
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            class="Button IconButton css-w119tu"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-411e09-MuiSvgIcon-root"
              data-testid="AddIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </span>
</div>
`;

exports[`should match snapshot, no groups 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div>
      <div
        class="octo-group-header-cell"
        draggable="true"
        style="opacity: 1;"
      >
        <div
          class="octo-table-cell"
          style="width: 100px;"
        >
          <span
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class="Button IconButton css-w119tu"
              style="width: 24px; height: 24px; margin-right: 4px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1yplxme-MuiSvgIcon-root"
                data-testid="ArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m10 17 5-5-5-5z"
                />
              </svg>
            </button>
          </span>
          <span
            aria-label="Items with an empty {propertyName} property will go here. This column cannot be removed."
            class="MuiTypography-root MuiTypography-subtitle1 css-xi0xw7-MuiTypography-root"
            data-mui-internal-clone-element="true"
          >
            No Property 1
          </span>
        </div>
        <button
          class="Button size--small"
          type="button"
        >
          <span>
            0
          </span>
        </button>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          data-testid="menu-wrapper"
          role="button"
        >
          <span
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class="Button IconButton css-w119tu"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-411e09-MuiSvgIcon-root"
                data-testid="MoreHorizIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                />
              </svg>
            </button>
          </span>
        </div>
        <span
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            class="Button IconButton css-w119tu"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-411e09-MuiSvgIcon-root"
              data-testid="AddIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </span>
</div>
`;
